# streaming-betfair-api

./: .gitignore  README.md  betfair-streaming-api.cabal  stack.yaml  streaming-betfair-api.cabal
app/: Sample.hs
misc/: .gitignore  formatted-ESASwaggerSchema.json
misc/swagger-generated-code/: README.md  betfair:-exchange-streaming.cabal
misc/swagger-generated-code/lib/Betfair:ExchangeStreaming/: API.hs  Types.hs
sample/: Sample.hs
src/: TimeUnitsJSONInstance.hs
src/Betfair/: BulkStreamingAPI.hs  StreamingAPI.hs
src/Betfair/StreamingAPI/API/: AddId.hs  Clks.hs  CommonTypes.hs  Config.hs  Context.hs  Log.hs  MarketState.hs  ReadFromTChan.hs  Request.hs  RequestProcessing.hs  Response.hs  ResponseException.hs  ResponseProcessing.hs  StreamingState.hs  ToRequest.hs
src/Betfair/StreamingAPI/Requests/: AuthenticationMessage.hs  HeartbeatMessage.hs  MarketSubscriptionMessage.hs  OrderSubscriptionMessage.hs
src/Betfair/StreamingAPI/Responses/: ConnectionMessage.hs  MarketChangeMessage.hs  OrderChangeMessage.hs  StatusMessage.hs
src/Betfair/StreamingAPI/Types/: BettingType.hs  ChangeType.hs  ErrorCode.hs  Field.hs  KeyLineDefinition.hs  KeyLineSelection.hs  MarketChange.hs  MarketDataFilter.hs  MarketDefinition.hs  MarketFilter.hs  MarketStatus.hs  Order.hs  OrderFilter.hs  OrderMarketChange.hs  OrderRunnerChange.hs  OrderStatus.hs  OrderType.hs  PersistenceType.hs  PriceLadderDefinition.hs  RequestStatus.hs  RunnerChange.hs  RunnerDefinition.hs  RunnerStatus.hs  SegmentType.hs  Side.hs
src/Network/Betfair/: StreamingAPI.hs
src/Network/Betfair/API/: AddId.hs  CommonTypes.hs  Config.hs  Context.hs  Log.hs  Main.hs  NonBlockingReadFromTChan.hs  ReadFromTChan.hs  Request.hs  RequestProcessing.hs  Response.hs  StreamingState.hs  test.hs
src/Network/Betfair/Requests/: Authentication.hs  AuthenticationMessage.hs  ConnectionMessage.hs  HeartbeatMessage.hs  MarketChangeMessage.hs  MarketSubscriptionMessage.hs  OrderChangeMessage.hs  OrderSubscriptionMessage.hs  StatusMessage.hs
src/Network/Betfair/Responses/: ConnectionMessage.hs  MarketChangeMessage.hs  OrderChangeMessage.hs  StatusMessage.hs
src/Network/Betfair/Types/: BettingType.hs  ChangeType.hs  ErrorCode.hs  Field.hs  MarketChange.hs  MarketDataFilter.hs  MarketDefinition.hs  MarketFilter.hs  MarketStatus.hs  Order.hs  OrderFilter.hs  OrderMarketChange.hs  OrderRunnerChange.hs  OrderStatus.hs  OrderType.hs  PersistenceType.hs  RequestStatus.hs  RunnerChange.hs  RunnerDefinition.hs  RunnerStatus.hs  SegmentType.hs  Side.hs
