name:                betfair-streaming-api
version:             0.1.4.3
synopsis:            betfair streaming api bindings
description:         betfair streaming api bindings
license:             MIT
license-file:        LICENSE
author:              joe
maintainer:          joe9mail@gmail.com
copyright:           Copyright (c) 2014 Joe
category:            Network
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
    type:            git
    location:        https://github.com/joe9/streaming-betfair-api.git

library
  exposed-modules:
--                   Betfair.StreamingAPI
                  Betfair.BulkStreamingAPI
                  Betfair.StreamingAPI.Responses.MarketChangeMessage
                  Betfair.StreamingAPI.Responses.OrderChangeMessage
                  Betfair.StreamingAPI.Responses.ConnectionMessage
                  Betfair.StreamingAPI.Responses.StatusMessage
                  Betfair.StreamingAPI.Requests.AuthenticationMessage
                  Betfair.StreamingAPI.Requests.OrderSubscriptionMessage
                  Betfair.StreamingAPI.Requests.MarketSubscriptionMessage
                  Betfair.StreamingAPI.Requests.HeartbeatMessage
                  Betfair.StreamingAPI.API.AddId
                  Betfair.StreamingAPI.API.CommonTypes
                  Betfair.StreamingAPI.API.Config
                  Betfair.StreamingAPI.API.Context
                  Betfair.StreamingAPI.API.Log
                  Betfair.StreamingAPI.API.Request
                  Betfair.StreamingAPI.API.RequestProcessing
                  Betfair.StreamingAPI.API.Response
                  Betfair.StreamingAPI.API.ResponseException
                  Betfair.StreamingAPI.API.ResponseProcessing
                  Betfair.StreamingAPI.API.StreamingState
                  Betfair.StreamingAPI.API.ToRequest
                  Betfair.StreamingAPI.Types.PersistenceType
                  Betfair.StreamingAPI.Types.Order
                  Betfair.StreamingAPI.Types.OrderMarketChange
                  Betfair.StreamingAPI.Types.ChangeType
                  Betfair.StreamingAPI.Types.MarketFilter
                  Betfair.StreamingAPI.Types.MarketChange
                  Betfair.StreamingAPI.Types.OrderRunnerChange
                  Betfair.StreamingAPI.Types.Field
                  Betfair.StreamingAPI.Types.MarketDefinition
                  Betfair.StreamingAPI.Types.OrderFilter
                  Betfair.StreamingAPI.Types.Side
                  Betfair.StreamingAPI.Types.RequestStatus
                  Betfair.StreamingAPI.Types.RunnerChange
                  Betfair.StreamingAPI.Types.OrderType
                  Betfair.StreamingAPI.Types.ErrorCode
                  Betfair.StreamingAPI.Types.BettingType
                  Betfair.StreamingAPI.Types.RunnerDefinition
                  Betfair.StreamingAPI.Types.OrderStatus
                  Betfair.StreamingAPI.Types.SegmentType
                  Betfair.StreamingAPI.Types.MarketStatus
                  Betfair.StreamingAPI.Types.MarketDataFilter
                  Betfair.StreamingAPI.Types.RunnerStatus

  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings
                     , NoImplicitPrelude
  build-depends:       base
                     , mtl
                     , data-default
                     , time
                     , iso8601-time
                     , bytestring
                     , safe
                     , utf8-string
                     , case-insensitive
                     , http-types
                     , connection
                     , template-default
                     , groom
                     , old-locale
                     , aeson
                     , containers
                     , exceptions
                     , safe-exceptions
                     , string-conversions
                     , text
                     , basic-prelude
                     , network
                     , stm
                     , transformers
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable Sample
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  main-is:             Sample.hs
--   other-modules:       API.ChartMarketCatalogue
  default-extensions:  NoImplicitPrelude
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings
  build-depends:       base
                     , mtl
                     , data-default
                     , time
                     , iso8601-time
                     , bytestring
                     , safe
                     , utf8-string
                     , case-insensitive
                     , http-types
                     , connection
                     , template-default
                     , groom
                     , old-locale
                     , aeson
                     , containers
                     , exceptions
                     , safe-exceptions
                     , string-conversions
                     , text
                     , basic-prelude
                     , network
                     , stm
                     , transformers
                     , betfair-streaming-api
  hs-source-dirs:    sample
  default-language:    Haskell2010
