name:                streaming-betfair-api
version:             0.1.1.0
synopsis:            betfair streaming api bindings
description:         betfair streaming api bindings
license:             MIT
license-file:        LICENSE
author:              joe
maintainer:          joe9mail@gmail.com
copyright:           Copyright (c) 2014 Joe
category:            Network
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
    type:            git
    location:        https://github.com/joe9/streaming-betfair-api.git

library
  exposed-modules: Network.Betfair.Requests.MarketChangeMessage
                 , Network.Betfair.Requests.Authentication
                 , Network.Betfair.Requests.OrderChangeMessage
                 , Network.Betfair.Requests.ConnectionMessage
                 , Network.Betfair.Requests.OrderSubscriptionMessage
                 , Network.Betfair.Requests.StatusMessage
                 , Network.Betfair.Requests.MarketSubscriptionMessage
                 , Network.Betfair.Requests.HeartbeatMessage
                 , Network.Betfair.Types.PersistenceType
                 , Network.Betfair.Types.Order
                 , Network.Betfair.Types.OrderMarketChange
                 , Network.Betfair.Types.ChangeType
                 , Network.Betfair.Types.MarketFilter
                 , Network.Betfair.Types.MarketChange
                 , Network.Betfair.Types.OrderRunnerChange
                 , Network.Betfair.Types.Field
                 , Network.Betfair.Types.MarketDefinition
                 , Network.Betfair.Types.OrderFilter
                 , Network.Betfair.Types.Side
                 , Network.Betfair.Types.RequestStatus
                 , Network.Betfair.Types.RunnerChange
                 , Network.Betfair.Types.OrderType
                 , Network.Betfair.Types.ErrorCode
                 , Network.Betfair.Types.BettingType
                 , Network.Betfair.Types.RunnerDefinition
                 , Network.Betfair.Types.OrderStatus
                 , Network.Betfair.Types.SegmentType
                 , Network.Betfair.Types.MarketStatus
                 , Network.Betfair.Types.MarketDataFilter
                 , Network.Betfair.Types.RunnerStatus


  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings
  build-depends:       base
                     , mtl
                     , json
                     , data-default
                     , time
                     , iso8601-time
                     , aeson
                     , bytestring
                     , safe
                     , utf8-string
                     , http-conduit
                     , case-insensitive
                     , http-types
                     , connection
                     , template-default
                     , groom
                     , old-locale
                     , aeson
                     , swagger2
                     , insert-ordered-containers
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
